--- a/src/css/map.css
+++ b/src/css/map.css
@@ -464,11 +464,18 @@ input[type=search] {
     line-height: 1.5;
 }
 
-
 .closeInfoPanel {
   position:absolute;
   top:10px;
   right:13px;
+  
+  /* Hide when panel is closed (prevent focus) */
+  display: none;
+}
+
+.infoPanel.is-open .closeInfoPanel {
+  /* Show when panel is open (make it focusable) */
+  display: block;
 }
 
 /* infoPanel hide/reveal animation */
